force-app/main/default/objects/Stage_Transition__c/Stage_Transition__c.object-meta.xml
<CustomObject>
    <description>Append-only log of every Intake status change. The instrumentation conversion rates and dwell times are derived from.</description>
    <label>Stage Transition</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Transition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>