force-app/main/default/objects/Stage_Transition__c/fields/From_Status__c.field-meta.xml
<CustomField>
    <fullName>From_Status__c</fullName>
    <description>Status before the change (blank on creation).</description>
    <label>From Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>