force-app/main/default/objects/Stage_Transition__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The intake whose status changed.</description>
    <label>Intake</label>
    <referenceTo>Intake__c</referenceTo>
    <relationshipLabel>Stage Transitions</relationshipLabel>
    <relationshipName>Stage_Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>