force-app/main/default/objects/Stage_Transition__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>When the transition happened.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>